--- a/refs.bib
+++ b/refs.bib
@@ -2190,3 +2190,67 @@ abstract = {We generalize the local model of primordial non-Gaussianity by promo
     url = {https://doi.org/10.1111/j.1365-2966.2004.08117.x},
     eprint = {https://academic.oup.com/mnras/article-pdf/353/3/713/4862464/353-3-713.pdf},
 }
+
+@misc{zhou2023desi,
+      title={DESI luminous red galaxy samples for cross-correlations}, 
+      author={Rongpu Zhou and Simone Ferraro and Martin White and Joseph DeRose and Noah Sailer and Jessica Aguilar and Steven Ahlen and Stephen Bailey and David Brooks and Todd Claybaugh and Kyle Dawson and Axel de la Macorra and Biprateep Dey and Peter Doel and Andreu Font-Ribera and Jaime E. Forero-Romero and Satya Gontcho A Gontcho and Julien Guy and Anthony Kremin and Andrew Lambert and Laurent Le Guillou and Michael Levi and Christophe Magneville and Marc Manera and Aaron Meisner and Ramon Miquel and John Moustakas and Adam D. Myers and Jeffrey A. Newman and Jundan Nie and Will Percival and Mehdi Rezaie and Graziano Rossi and Eusebio Sanchez and David Schlegel and Michael Schubnell and Hee-Jong Seo and Gregory Tarlé and Zhimin Zhou},
+      year={2023},
+      eprint={2309.06443},
+      archivePrefix={arXiv},
+      primaryClass={astro-ph.CO}
+}
+
+
+
+@ARTICLE{jose2023,
+       author = {Jose Bermejo-Climent and {et al}},
+        title = "",
+        journal = {in preparation},
+        year = {2023} 
+}
+
+
+@article{Becker_2012,
+	doi = {10.1088/1475-7516/2012/12/034},
+  
+	url = {https://doi.org/10.1088%2F1475-7516%2F2012%2F12%2F034},
+  
+	year = 2012,
+	month = {dec},
+  
+	publisher = {{IOP} Publishing},
+  
+	volume = {2012},
+  
+	number = {12},
+  
+	pages = {034--034},
+  
+	author = {Adam Becker and Dragan Huterer and Kenji Kadota},
+  
+	title = {Constraining scale-dependent non-Gaussianity with future large-scale structure and the {CMB}
+},  
+	journal = {Journal of Cosmology and Astroparticle Physics}
+}
+
+
+
+@ARTICLE{2008JCAP...04..014L,
+       author = {{LoVerde}, Marilena and {Miller}, Amber and {Shandera}, Sarah and {Verde}, Licia},
+        title = "{Effects of scale-dependent non-Gaussianity on cosmological structures}",
+      journal = {\jcap},
+     keywords = {Astrophysics},
+         year = 2008,
+        month = apr,
+       volume = {2008},
+       number = {4},
+          eid = {014},
+        pages = {014},
+          doi = {10.1088/1475-7516/2008/04/014},
+archivePrefix = {arXiv},
+       eprint = {0711.4126},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2008JCAP...04..014L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
