--- a/sections/acknowledgement.tex
+++ b/sections/acknowledgement.tex
@@ -1,5 +1,5 @@
 \section*{Acknowledgements}
-We would like to thank Dragan Huterer and Douglas Finkbeiner for feedback on an early version of the manuscript; Violeta Gonzalez-Perez for handling the DESI internal review process; Tanveer Karim, Sukhdeep Singh, Ahmad Shamloumehr, and Reza Katebi for helpful discussions; and Rongpu Zhou for providing the maps for galaxy density and imaging systematics. MR would like to thank Ohio State's Center for Cosmology and AstroParticle Physics, in particular, John Beacom and Lisa Colarosa, for their hospitality and support. MR is supported by the U.S. Department of Energy grants DE-SC0021165 and DE-SC0011840. H-JS acknowledges support from the U.S. Department of Energy, Office of Science, 
+We would like to thank Dragan Huterer and Douglas Finkbeiner for feedback on an early version of the manuscript; Violeta Gonzalez-Perez for handling the DESI internal review process; Tanveer Karim, Sukhdeep Singh, Ahmad Shamloumehr, and Reza Katebi for helpful discussions; and Rongpu Zhou for \mr{estimating the slope of the number counts and} providing the maps for galaxy density and imaging systematics. MR would like to thank Ohio State's Center for Cosmology and AstroParticle Physics, in particular, John Beacom and Lisa Colarosa, for their hospitality and support. MR is supported by the U.S. Department of Energy grants DE-SC0021165 and DE-SC0011840. H-JS acknowledges support from the U.S. Department of Energy, Office of Science, 
 Office of High Energy Physics under grant No. DE-SC0019091 and No. DE-SC0023241. FB is a University Research Fellow, and has received funding from the European Research Council (ERC) under the European Union’s Horizon 2020 research and innovation program (grant agreement 853291). BB-K is supported by the project \begin{CJK}{UTF8}{mj}우주거대구조를 이용한 암흑우주 연구\end{CJK} (``Understanding Dark Universe Using Large Scale Structure of the Universe’’), funded by the Ministry of Science of the Republic of Korea. We acknowledge the support and resources from the Ohio Supercomputer Center \citep[OSC;][]{OhioSupercomputerCenter1987}. This research has made substantial use of the arXiv preprint server, NASA’s Astrophysics Data System, Github's online software development platform, and many open-source software, such as Pytorch, Nbodykit, HEALPix, Fitsio, Scikit-Learn, NumPy, SciPy, Pandas, IPython, and Jupyter. 
 
 
