--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -30,17 +30,22 @@ The relationship between the linear matter power spectrum $P(k)$ and the project
 \begin{equation}\label{eq:cell}
 C_{\ell} = \frac{2}{\pi}\int_{0}^{\infty}\frac{dk}{k}k^{3}P(k)|\Delta_{\ell}(k)|^{2} + N_{\rm shot},
 \end{equation}
-where $N_{\rm shot}$ is a scale-independent shot noise term. The projection kernel $\Delta_{\ell}(k) = \Delta^{\rm g}_{\ell}(k) + \Delta^{\rm RSD}_{\ell}(k)$ includes redshift space distortions and determines the contribution of each wavenumber $k$ to the galaxy power spectrum on mode $\ell$. For more details on this estimator, refer to \cite{Padmanabhan2007}. The non-linearities in the matter power spectrum are negligible for the scales of interest \citep[see, e.g.,][]{Ho2015JCAP...05..040H}. For $\ell=40$, $\Delta_{\ell}(k)$ peaks at $k\sim 0.02~ h\text{Mpc}^{-1}$, which is above the non-linear regime. The FFTLog\footnote{\href{https://github.com/xfangcosmo/FFTLog-and-beyond}{github.com/xfangcosmo/FFTLog-and-beyond}} algorithm and its extension as implemented in \cite{fang2020beyond} are employed to calculate the integrals for the projection kernel $\Delta_{\ell}(k)$, which includes the $l^{\rm th}$ order spherical Bessel functions, $ j_{\ell}(kr)$, and its second derivatives,
+where $N_{\rm shot}$ is a scale-independent shot noise term. The projection kernel $\Delta_{\ell}(k) = \Delta^{\rm g}_{\ell}(k) + \Delta^{\rm RSD}_{\ell}(k) + \Delta^{\mu}_{\ell}(k)$ includes redshift space distortions \mr{and magnification bias,} and determines the contribution of each wavenumber $k$ to the galaxy power spectrum on mode $\ell$. For more details on this estimator, refer to \cite{Padmanabhan2007}. The non-linearities in the matter power spectrum are negligible for the scales of interest \citep[see, e.g.,][]{Ho2015JCAP...05..040H}. For $\ell=40$, $\Delta_{\ell}(k)$ peaks at $k\sim 0.02~ h\text{Mpc}^{-1}$, which is above the non-linear regime. The FFTLog\footnote{\href{https://github.com/xfangcosmo/FFTLog-and-beyond}{github.com/xfangcosmo/FFTLog-and-beyond}} algorithm and its extension as implemented in \cite{fang2020beyond} are employed to calculate the integrals for the projection kernel $\Delta_{\ell}(k)$, which includes the $l^{\rm th}$ order spherical Bessel functions, $ j_{\ell}(kr)$, and its second derivatives,
 \begin{align}
     \Delta^{\rm g}_{\ell}(k) &= \int \frac{dr}{r} r (b+\Delta b) D(r) \frac{dN}{dr} j_{\ell}(kr),\\
-    \Delta^{\rm RSD}_{\ell}(k) &= - \int \frac{dr}{r} r f(r) D(r) \frac{dN}{dr} j^{\prime\prime}_{\ell}(kr),
+    \Delta^{\rm RSD}_{\ell}(k) &= - \int \frac{dr}{r} r f(r) D(r) \frac{dN}{dr} j^{\prime\prime}_{\ell}(kr),\\
+    \Delta^{\mu}_{\ell}(k) &= - \ell(\ell+1) \int dr D(r) W_{\mu}(z) j_{\ell}(kr),
 \end{align}
-where $b$ is the linear bias (dashed curve in Figure \ref{fig:nz}), $D$ represents the linear growth factor normalized as $D(z=0)=1$, $f(r)$ is the growth rate, and $dN/dr$ is the redshift distribution of galaxies normalized to unity and described in terms of comoving distance\footnote{$dN/dr = (dN/dz)(dz/dr) \propto (dN/dz)H(z)$} (solid curve in Figure \ref{fig:nz}). The PNG-induced scale-dependent shift is given by \citep{slosar2008constraints}
+where $b$ is the linear bias (dashed curve in Figure \ref{fig:nz}), $D$ represents the linear growth factor normalized as $D(z=0)=1$, $f(r)$ is the growth rate, and $dN/dr$ is the redshift distribution of galaxies normalized to unity and described in terms of comoving distance\footnote{$dN/dr = (dN/dz)(dz/dr) \propto (dN/dz)H(z)$} (solid curve in Figure \ref{fig:nz}). \mr{The magnification bias window function $W_{\mu}(z)$ is}
+\begin{equation}
+W_{\mu}(z) = (5s-2)\frac{3H^{2}_{0}\Omega_{m}(1+z)}{2c^{2}k^{2}} \int_{z}^{\infty} dz^{\prime}\frac{dN}{dz} \frac{r(z^{\prime}) - r(z)}{r(z^{\prime})r(z)},
+\end{equation}
+\mr{where $\Omega_{m}$ is the matter density, $H_{0}$ is the Hubble constant\footnote{$H_{0}=100~({\rm km}~{\rm s}^{-1})/(h^{-1}{\rm Mpc})$ and $k$ is in unit of $h {\rm Mpc}^{-1}$}, and the magnification bias slope $s$ is the response of the number density to achromatic changes in the brightness of targets.} The PNG-induced scale-dependent shift is given by \citep{slosar2008constraints}
 \begin{equation}
 \Delta b = b_{\phi}(z) \fnl \frac{3 \Omega_{m} H^{2}_{0}}{2 k^{2}T(k)D(z) c^{2}} \frac{g(\infty)}{g(0)},
 \label{eq:scaledepbias}
 \end{equation}
-where $\Omega_{m}$ is the matter density, $H_{0}$ is the Hubble constant\footnote{$H_{0}=100~({\rm km}~{\rm s}^{-1})/(h^{-1}{\rm Mpc})$ and $k$ is in unit of $h {\rm Mpc}^{-1}$}, $T(k)$ is the transfer function, and $g(\infty)/g(0) \sim 1.3$ with $g(z)\equiv (1+z) D(z)$ is the growth suppression due to non-zero $\Lambda$ because of our normalization of $D$ \citep[see, e.g.,][]{2010JCAP...07..013R, 2019MNRAS.485.4160M}. We assume the universality relation which directly relates $b_\phi$ to $b$ via $b_{\phi} = 2 \delta_{c}(b - p)$ with $\delta_{c}= 1.686$ representing the critical density for spherical collapse \citep{fillmore1984self}. We fix $p=1$ in our analysis and marginalize over b \citep[see, also,][]{slosar2008constraints,2010JCAP...07..013R,2013MNRAS.428.1116R}.
+where $T(k)$ is the transfer function, and $g(\infty)/g(0) \sim 1.3$ with $g(z)\equiv (1+z) D(z)$ is the growth suppression due to non-zero $\Lambda$ because of our normalization of $D$ \citep[see, e.g.,][]{2010JCAP...07..013R, 2019MNRAS.485.4160M}. We assume the universality relation which directly relates $b_\phi$ to $b$ via $b_{\phi} = 2 \delta_{c}(b - p)$ with $\delta_{c}= 1.686$ representing the critical density for spherical collapse \citep{fillmore1984self}. We fix $p=1$ in our analysis and marginalize over b \citep[see, also,][]{slosar2008constraints,2010JCAP...07..013R,2013MNRAS.428.1116R}. \mr{We fix the slope of the number counts parameter $s$ in our analysis to the values determined by finite differences, which entails shifting all magnitudes by an infinitesimal amount and re-running the color-mag selection. For a fiber-flux selected sample like ours, the estimation of $s$ requires a careful analysis to quantify the impact of magnification on each target shape given the morphology of each target, as described in \cite{zhou2023desi}. The parameter $s$ is found to vary slightly in the different imaging regions: $s=0.951\pm 0.011$ for BASS+MzLS, $s=0.943 \pm 0.007$ for DECaLS North+DECaLS South, and $s=0.945\pm 0.006$ for the DESI footprint\footnote{Private communication with Dr. Rongpu Zhou.}.} 
 
 \begin{figure}
 \centering
