--- a/style.sty
+++ b/style.sty
@@ -23,7 +23,7 @@
 \graphicspath{{./}{figures/}}
 
 % ----- add your commands
-\newcommand{\mr}[1]{\textcolor{blue}{#1}}
+\newcommand{\mr}[1]{\textcolor{red}{#1}}
 \newcommand{\mout}[1]{\textcolor{red}{\sout{#1}}}
 \newcommand{\bbk}[1]{\textcolor{magenta}{#1}}
 \newcommand{\fnl}{f_{\rm NL}}
