--- a/sections/conclusion.tex
+++ b/sections/conclusion.tex
@@ -11,7 +11,7 @@ The signature of local PNG is very sensitive to excess clustering signals caused
     \label{fig:fnlhist}
 \end{figure}
 
-When comparing our fiducial results to recent CMB and QSO measurements, as shown in Figure \ref{fig:fnlhist}, we find a significant $3\sigma$ tension with CMB but consistent constraints with LSS within $95\%$ confidence. \mr{It is imperative to emphasize that the discrepancy between our non-linear three maps constraint and CMB is persistent even without accounting for over-correction; $P(\fnl>0)$ decreases from 99.9 to 99.4. The uncalibrated constraints from the non-linear four and non-linear nine maps methods are consistent with CMB, but these methods are highly prone to over-fitting and their use are not justified based on our remaining systematic $\chi^{2}$ diagnostics. Therefore, either} we have measured an $\fnl$ signal that is inconsistent with CMB measurements or there is a hidden source of systematic contamination in our data which cannot be mitigated with available imaging systematic maps. \mr{Alternatively, our measurements could be interpreted as evidence for scale-dependent non-Gaussianities \citep{2008JCAP...04..014L, Becker_2012}, where some kind of scale-dependence in the $\fnl$ model produces a large non-Gaussianity on LSS scales but negligible one at CMB scales \citep{sefusatti_2009, becker_2011}. A major limitation of template-based mitigation techniques, like what used in this work, is that the data cannot be corrected for unknown systematic effects, which we do not have a template for. In this regard, multi-tracer techniques can be considered as robust alternatives since they are less sensitive to systematics. Cross-correlations of DESI LRG targets with CMB lensing could shed more light on the issues discussed in this paper. Additionally, forward modeling techniques for estimating the galaxy survey selection function can provide a new path to handle unknown systematics \citep{suchyta2016, kong2020}.}
+When comparing our fiducial results to recent CMB and QSO measurements, as shown in Figure \ref{fig:fnlhist}, we find a significant $3\sigma$ tension with CMB but consistent constraints with LSS within $95\%$ confidence. \mr{It is imperative to emphasize that the discrepancy between our non-linear three maps constraint and CMB is persistent even without accounting for over-correction; $P(\fnl>0)$ decreases from 99.9 to 99.4 per cent. The uncalibrated constraints from the non-linear four and non-linear nine maps methods are consistent with CMB, but these methods are highly prone to over-fitting and their use are not justified based on our remaining systematic $\chi^{2}$ diagnostics. Therefore, either} we have measured an $\fnl$ signal that is inconsistent with CMB measurements or there is a hidden source of systematic contamination in our data which cannot be mitigated with available imaging systematic maps. \mr{Alternatively, our measurements could be interpreted as evidence for scale-dependent non-Gaussianities \citep{2008JCAP...04..014L, Becker_2012}, where some kind of scale-dependence in the $\fnl$ model produces a large non-Gaussianity on LSS scales but negligible one at CMB scales \citep{sefusatti_2009, becker_2011}. A major limitation of template-based mitigation techniques, like what used in this work, is that the data cannot be corrected for unknown systematic effects, which we do not have a template for. In this regard, multi-tracer techniques can be considered as robust alternatives since they are less sensitive to systematics. Cross-correlations of DESI LRG targets with CMB lensing could shed more light on the issues discussed in this paper. Additionally, forward modeling techniques for estimating the galaxy survey selection function can provide a new path to handle unknown systematics \citep{suchyta2016, kong2020}.}
 
 
 
