--- a/sections/results.tex
+++ b/sections/results.tex
@@ -222,5 +222,5 @@ DECaLS South (comp. cut)  & Nonlinear Three Maps& $    29$& $    28$& $     8<\f
 \includegraphics[width=0.45\textwidth]{figures/fnl_p.pdf}
 \includegraphics[width=0.45\textwidth]{figures/fnl_p2.pdf}
 \includegraphics[width=0.45\textwidth]{figures/fnl_magbias.pdf}
-\caption{\mr{Caption}}\label{fig:fnl_magbias}
+\caption{\mr{Best fit estimates and $68\%$ ($95\%$) error on $\fnl$ from fitting the DESI DR9 LRG sample using the non-linear three maps cleaning approach. We find a weak dependence on $p$ but negligible impact on $s$.}}\label{fig:fnl_magbias}
 \end{figure}
