--- a/sections/authorlist.tex
+++ b/sections/authorlist.tex
@@ -1,6 +1,6 @@
 % If you need two or more lines of authors, add an extra line using \newauthor
 
-\author[M. Rezaie et al.]{Mehdi Rezaie$^{1,2}$, Ashley J. Ross$^{2}$, Hee-Jong Seo$^{3,4}$, Hui Kong$^{5}$, \newauthor Anna Porredon$^{6}$, Lado Samushia$^{1}$, Edmond Chaussidon$^{7}$, Alex Krolewski$^{8,9,10}$, \newauthor Arnaud de Mattia$^{7}$, Florian Beutler$^{6}$, Jessica Nicole Aguilar$^{4}$, Steven Ahlen$^{11}$, \newauthor Shadab Alam$^{12}$, Santiago Avila$^{5}$, Benedict Bahr-Kalus$^{13}$, Jose Bermejo-Climent$^{14}$, \newauthor David Brooks$^{15}$, Todd Claybaugh$^{4}$, Shaun Cole$^{16}$, Kyle Dawson$^{17}$, \newauthor Axel de la Macorra$^{18}$, Peter Doel$^{15}$, Andreu Font-Ribera$^{5}$, Jaime E. Forero-Romero$^{19,20}$, \newauthor Satya Gontcho A Gontcho$^{4}$, Julien Guy$^{4}$, Klaus Honscheid$^{2, 21}$, Theodore Kisner$^{4}$, \newauthor Martin Landriau$^{4}$, Michael Levi$^{4}$, Marc Manera$^{5,22}$, Aaron Meisner$^{23}$, \newauthor Ramon Miquel$^{5, 24}$, Eva-Maria Mueller$^{25}$, Adam Myers$^{26}$, Jeffrey A. Newman$^{27}$, \newauthor Jundan Nie$^{28}$, Nathalie Palanque-Delabrouille$^{4,7}$, Will Percival$^{8,9,10}$, Claire Poppett$^{4,29}$, \newauthor Graziano Rossi$^{30}$, Eusebio Sanchez$^{31}$, Michael Schubnell$^{32}$, Gregory Tarlé$^{32}$, \newauthor Benjamin Alan Weaver$^{23}$, Christophe Yèche$^{7}$, Zhimin Zhou$^{28}$, Hu Zou$^{28}$
+\author[M. Rezaie et al.]{Mehdi Rezaie$^{1,2}$, Ashley J. Ross$^{2}$, Hee-Jong Seo$^{3,4}$, Hui Kong$^{5}$, \newauthor Anna Porredon$^{6}$, Lado Samushia$^{1}$, Edmond Chaussidon$^{7}$, Alex Krolewski$^{8,9,10}$, \newauthor Arnaud de Mattia$^{7}$, Florian Beutler$^{6}$, Jessica Nicole Aguilar$^{4}$, Steven Ahlen$^{11}$, \newauthor Shadab Alam$^{12}$, Santiago Avila$^{5}$, Benedict Bahr-Kalus$^{13}$, Jose Bermejo-Climent$^{14}$, \newauthor David Brooks$^{15}$, Todd Claybaugh$^{4}$, Shaun Cole$^{16}$, Kyle Dawson$^{17}$, \newauthor Axel de la Macorra$^{18}$, Peter Doel$^{15}$, Andreu Font-Ribera$^{5}$, Jaime E. Forero-Romero$^{19,20}$, \newauthor Satya Gontcho A Gontcho$^{4}$, Julien Guy$^{4}$, Klaus Honscheid$^{2, 21}$, \mr{Dragan Huterer$^{22}$}, \newauthor Theodore Kisner$^{4}$, Martin Landriau$^{4}$, Michael Levi$^{4}$, Marc Manera$^{5,23}$, Aaron Meisner$^{24}$, \newauthor Ramon Miquel$^{5, 25}$, Eva-Maria Mueller$^{26}$, Adam Myers$^{27}$, Jeffrey A. Newman$^{28}$, \newauthor Jundan Nie$^{29}$, Nathalie Palanque-Delabrouille$^{4,7}$, Will Percival$^{8,9,10}$, Claire Poppett$^{4,30}$, \newauthor Graziano Rossi$^{31}$, Eusebio Sanchez$^{32}$, Michael Schubnell$^{22}$, Gregory Tarlé$^{22}$, \newauthor Benjamin Alan Weaver$^{24}$, Christophe Yèche$^{7}$, Zhimin Zhou$^{29}$, Hu Zou$^{29}$
 \\~\\
 % List of institutions
 $^{1}$Department of Physics, Kansas State University, 116 Cardwell Hall, Manhattan, KS 66506, USA\\ 
@@ -23,14 +23,14 @@ $^{18}$Instituto de F\'{\i}sica, Universidad Nacional Aut\'{o}noma de M\'{e}xico
 $^{19}$Departamento de F\'isica, Universidad de los Andes, Cra. 1 No. 18A-10, Edificio Ip, CP 111711, Bogot\'a, Colombia\\ 
 $^{20}$Observatorio Astron\'omico, Universidad de los Andes, Cra. 1 No. 18A-10, Edificio H, CP 111711 Bogot\'a, Colombia\\ 
 $^{21}$Department of Physics, The Ohio State University, 191 West Woodruff Avenue, Columbus, OH 43210, USA\\ 
-$^{22}$Departament de F\'{i}sica, Universitat Aut\`{o}noma de Barcelona, 08193 Bellaterra (Barcelona), Spain\\ 
-$^{23}$NSF's NOIRLab, 950 N. Cherry Ave., Tucson, AZ 85719, USA\\ 
-$^{24}$Instituci\'{o} Catalana de Recerca i Estudis Avan\c{c}ats, Passeig de Llu\'{\i}s Companys, 23, 08010 Barcelona, Spain\\ 
-$^{25}$Department of Physics and Astronomy, University of Sussex, Brighton BN1 9QH, U.K\\ 
-$^{26}$Department of Physics \& Astronomy, University  of Wyoming, 1000 E. University, Dept.~3905, Laramie, WY 82071, USA\\ 
-$^{27}$Department of Physics \& Astronomy, University of Pittsburgh, 3941 O'Hara Street, Pittsburgh, PA 15260, USA\\ 
-$^{28}$National Astronomical Observatories, Chinese Academy of Sciences, A20 Datun Rd., Chaoyang District, Beijing, 100012, P.R. China\\ 
-$^{29}$Space Sciences Laboratory, University of California, Berkeley, 7 Gauss Way, Berkeley, CA  94720, USA\\ 
-$^{30}$Department of Physics and Astronomy, Sejong University, Seoul, 143-747, Korea\\ 
-$^{31}$CIEMAT, Avenida Complutense 40, E-28040 Madrid, Spain\\ 
-$^{32}$Department of Physics, University of Michigan, Ann Arbor, MI 48109, USA}
+$^{22}$Department of Physics, University of Michigan, Ann Arbor, MI 48109, USA\\
+$^{23}$Departament de F\'{i}sica, Universitat Aut\`{o}noma de Barcelona, 08193 Bellaterra (Barcelona), Spain\\ 
+$^{24}$NSF's NOIRLab, 950 N. Cherry Ave., Tucson, AZ 85719, USA\\ 
+$^{25}$Instituci\'{o} Catalana de Recerca i Estudis Avan\c{c}ats, Passeig de Llu\'{\i}s Companys, 23, 08010 Barcelona, Spain\\ 
+$^{26}$Department of Physics and Astronomy, University of Sussex, Brighton BN1 9QH, U.K\\ 
+$^{27}$Department of Physics \& Astronomy, University  of Wyoming, 1000 E. University, Dept.~3905, Laramie, WY 82071, USA\\ 
+$^{28}$Department of Physics \& Astronomy, University of Pittsburgh, 3941 O'Hara Street, Pittsburgh, PA 15260, USA\\ 
+$^{29}$National Astronomical Observatories, Chinese Academy of Sciences, A20 Datun Rd., Chaoyang District, Beijing, 100012, P.R. China\\ 
+$^{30}$Space Sciences Laboratory, University of California, Berkeley, 7 Gauss Way, Berkeley, CA  94720, USA\\ 
+$^{31}$Department of Physics and Astronomy, Sejong University, Seoul, 143-747, Korea\\ 
+$^{32}$CIEMAT, Avenida Complutense 40, E-28040 Madrid, Spain}
