--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -45,7 +45,7 @@ W_{\mu}(z) = (5s-2)\frac{3H^{2}_{0}\Omega_{m}(1+z)}{2c^{2}k^{2}} \int_{z}^{\inft
 \Delta b = b_{\phi}(z) \fnl \frac{3 \Omega_{m} H^{2}_{0}}{2 k^{2}T(k)D(z) c^{2}} \frac{g(\infty)}{g(0)},
 \label{eq:scaledepbias}
 \end{equation}
-where $T(k)$ is the transfer function, and $g(\infty)/g(0) \sim 1.3$ with $g(z)\equiv (1+z) D(z)$ is the growth suppression due to non-zero $\Lambda$ because of our normalization of $D$ \citep[see, e.g.,][]{2010JCAP...07..013R, 2019MNRAS.485.4160M}. We assume the universality relation which directly relates $b_\phi$ to $b$ via $b_{\phi} = 2 \delta_{c}(b - p)$ with $\delta_{c}= 1.686$ representing the critical density for spherical collapse \citep{fillmore1984self}. We fix $p=1$ in our analysis and marginalize over b \citep[see, also,][]{slosar2008constraints,2010JCAP...07..013R,2013MNRAS.428.1116R}. \mr{We fix the slope of the number counts parameter $s$ in our analysis to the values determined by finite differences, which entails shifting all magnitudes by an infinitesimal amount and re-running the color-mag selection. For a fiber-flux selected sample like ours, the estimation of $s$ requires a careful analysis to quantify the impact of magnification on each target shape given the morphology of each target, as described in \cite{zhou2023desi}. The parameter $s$ is found to vary slightly in the different imaging regions: $s=0.951\pm 0.011$ for BASS+MzLS, $s=0.943 \pm 0.007$ for DECaLS North+DECaLS South, and $s=0.945\pm 0.006$ for the DESI footprint\footnote{Private communication with Dr. Rongpu Zhou.}.} 
+where $T(k)$ is the transfer function, and $g(\infty)/g(0) \sim 1.3$ with $g(z)\equiv (1+z) D(z)$ is the growth suppression due to non-zero $\Lambda$ because of our normalization of $D$ \citep[see, e.g.,][]{2010JCAP...07..013R, 2019MNRAS.485.4160M}. We assume the universality relation which directly relates $b_\phi$ to $b$ via $b_{\phi} = 2 \delta_{c}(b - p)$ with $\delta_{c}= 1.686$ representing the critical density for spherical collapse \citep{fillmore1984self}. We fix $p=1$ in our analysis and marginalize over b \citep[see, also,][]{slosar2008constraints,2010JCAP...07..013R,2013MNRAS.428.1116R}. \mr{We fix the slope of the number counts parameter $s$ in our analysis to the values determined by finite differences, which entails shifting all magnitudes by an infinitesimal amount and re-running the color-mag selection. For a fiber-flux selected sample like ours, the estimation of $s$ requires a careful characterisation of the impact of magnification on each target brightness and its shape parameters given the morphology of each target, as described in \cite{zhou2023desi}. For our sample, the parameter $s$ is found to vary slightly in the different imaging regions: $s=0.951\pm 0.011$ for BASS+MzLS, $s=0.943 \pm 0.007$ for DECaLS North+DECaLS South, and $s=0.945\pm 0.006$ for DESI\footnote{Private communication with Dr. Rongpu Zhou.}.} 
 
 \begin{figure}
 \centering
