--- a/sections/results.tex
+++ b/sections/results.tex
@@ -98,7 +98,7 @@ Now we proceed to perform some robustness tests and assess how sensitive the $\f
 
 \item \textbf{Scale dependence (\textit{varying $\ell_{\rm min}$})}: We raise the value of the lowest harmonic mode $\ell_{\rm min}$ used for the likelihood evaluation during MCMC. This is equivalent to utilizing smaller spatial scales in the measurements of the power spectrum. By doing so, we anticipate a reduction in the impact of imaging systematics on $\fnl$ inference as lower $\ell$ modes are more likely to be contaminated. Figure \ref{fig:mcmc_dr9elmin} illustrates the power spectra before and after the correction with \textit{non-linear three maps} in the top panel. The bottom panel shows the marginalized mean and $68\%$ error on $\fnl$ with \textit{non-linear three maps} for the DESI, BASS+MzLS, DECaLS North, and DECaLS South regions. We discover that a slight upward shift in the mean estimates of $\fnl$ on scales ranging from $12$ to $18$ for DECaLS North and BASS+MzLS when we utilized a higher $\ell_{\rm min}$. This outcome might imply that the imaging systematic maps do not contain enough information to help the cleaning method null out the contaminating signal in the NGC. We also find that the bump is resilient against an alternative correction, in which we apply the neural networks trained on the DECaLS South to the DECaLS North region (see \ref{ssec:ndecalsbump}). Overall, this result is contrary to what one might predict if a significant systematic-induced spike existed at the very low $\ell$\mr{, or if we had an extremely large-scale systematic leakage from the $\ell=1$ mode}. As a result, it suggests that the underlying issue is more subtle than originally anticipated.
 
-\mr{\item \textbf{Theoretical systematics}: Our analysis is simplified by fixing the values of $p$ and $s$ to their pre-determined and estimated values. We also explore the robustness of the $\fnl$ posterior against various values of $p$, ranging between $0.55$ and $1.6$, and $s$ from $0.75$ to $1.25$. Overall, as illustrated in Figure \ref{fig:fnl_magbias}, we find that the $\fnl$ posterior to be insensitive to the value of $s$, and the impact of $p$ on $P(\fnl > 0)$ to be insignificant (see Table \ref{tab:dr9ps}).}
+\mr{\item \textbf{Theoretical systematics}: Our analysis is simplified by fixing the values of $p$ and $s$ to their pre-determined and estimated values. As a robustness check, we explore the sensitivity of the $\fnl$ posterior to various values of $p$, ranging between $0.55$ and $1.6$, and $s$ from $0.75$ to $1.25$. Overall, as illustrated in Figure \ref{fig:fnl_magbias} and summarized in Table \ref{table:dr9ps}, we find that the $\fnl$ posterior to be quite insensitive to the value of $s$, and both the best fitting estimate and the error increase as a function of $p$; however the overall impact on the signal to noise and $P(\fnl > 0)$ is shown to be insignificant.}
 \end{itemize}
 
 
